--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2559,107 +2559,107 @@ stories:
   domain: http://www.valleyreporter.com/
   link: https://www.valleyreporter.com/index.php/news/local-news/13424-friends-of-moretown-opposed-to-closing-school
 images:
-- name: fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-- name: trucksilo-trucksilo-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-satan-red.jpg
-- name: oldtrain-oldtrain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crunch-paper.jpg
-- name: mistywoods-babyfoot-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dry-skin.jpg
-- name: dragon-desert-desert-dragon-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-hot-spicy.jpg
-- name: old-barn-old-barn-1500-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-monet-one.jpg
-- name: blossombar-crafty-painting-file-00-00-50-48.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-48.jpg
-- name: christianity-christianity-under-construction-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
-- name: docks-docks-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
-- name: subway-subway-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kand-two.jpg
-- name: white-house-lawn-white-house-lawn-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-nazi-poster.jpg
-- name: downtheline-downtheline-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-far-away.jpg
-- name: stories-losangeles-from-observatory-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-blue-circuit.jpg
-- name: trucksilo-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-soul.jpg
-- name: abe-lincoln-one-plentiful-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-15-87.jpg
-- name: adam-smith-adam-smith-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colorful-dream.jpg
-- name: fence-mexico-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
-- name: trucksilo-trucksilo-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-gred-mash.jpg
-- name: old-door-lock-old-door-lock-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crabapple.jpg
-- name: oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
-- name: old-granary-field-granaryfield-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-asteroids.jpg
-- name: oldhouse-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
-- name: subway-subway-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smoking-cigarette.jpg
-- name: miamibeach-miamibeach-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-asteroids.jpg
-- name: store-on-corner-oldcabin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-plentiful.jpg
-- name: castle-wall-DSC-0067-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-really-hot.JPG
-- name: oldhouse-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-rainbow-festival.jpg
-- name: dc-statue-dcstatue-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-blocks.jpg
-- name: blossombar-crafty-painting-file-00-00-50-25.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
-- name: meadowbutterfly-meadow-butterfly-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crabapple.jpg
-- name: ellis-island-ellis-island-room-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-asteroids.jpg
-- name: wind-mills-windmills-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-constitution.jpg
-- name: gypsymosaic-gypsy-eyes-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-pablo-blue.jpg
-- name: stories-new-32-161-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-161-800-500-0-max-0--5--1.jpg
-- name: power-lines-power-lines-empty-space-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
-- name: nyc-flag-nycflag-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-two.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-- name: crow-crow-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
-- name: cargo-ship-cargo-ship-on-sea-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sunday.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
-- name: downtown-los-angeles-downtown-la-dali-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-two.JPG
-- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-- name: paris-paris-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-clean-view.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-- name: old-door-lock-old-door-lock-2-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alien-goggles.jpg
-- name: store-on-corner-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-rainbow-festival.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-- name: aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-- name: old-house-oldhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-constitution.jpg
+- name: carry-load-carryload-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-creativity.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+- name: powerlines-power-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-gan-vogh.jpg
+- name: stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
+- name: berlinwall2-berlinwall-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-deep-connections.jpg
+- name: gypsymosaic-gypsy-eyes-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-three.jpg
+- name: store-on-corner-oldcabin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin.jpg
+- name: stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
+- name: oldhotel-oldhotel-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alberto-giacometti.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+- name: server-cloud-server-racks-clouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-nazi-poster.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
+- name: death-valley-death-valley-national-park-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
+- name: subway-subway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-space-pizza.jpg
+- name: cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
+- name: oldtrain-oldtrain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
+- name: border-crossing-bordercrossing-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alberto-giacometti.png
+- name: downtown-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-asteroids.jpg
+- name: beach-clouds-lifeguard-beachclouds-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-monet-one.jpg
+- name: art-museum-art-museum-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-dresden.jpg
+- name: meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+- name: old-cabin-oldcabin-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-umberto-bocc.jpg
+- name: server-cloud-server-racks-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-plentiful.jpg
+- name: server-cloud-server-racks-door-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-soul.jpg
+- name: oldcabin-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-diego-rivera1.jpg
+- name: catacombs-catacombs-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-graham-sutherland.jpg
+- name: downtown-old-empty-retail-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-uncle-sam.jpg
+- name: ellis-island-ellis-island-room-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-internet-numbers.jpg
+- name: lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
+- name: birdhouse-birdhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-really-hot.jpg
+- name: 35201856153_61bc075e4b-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
+- name: old-school-house-old-schoolhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-two.jpg
+- name: school-clouds-church-clouds-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-monet-one.jpg
+- name: eduardo-eduardo-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-soul.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+- name: blossombar-deep-connections-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-24-99.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
+- name: catacombs-catacombs-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
+- name: meadowbutterfly-meadow-butterfly-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-aqua.jpg
+- name: liberty-back-statue-liberty-back-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-pond.jpg
+- name: power-lines-power-lines-empty-space-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-far-away.jpg
+- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
+- name: blossombar-dark-rain-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-50-62.jpg
+- name: containership-containership-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-missle.jpg
+- name: gypsy-wagon-gypsywagon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon.jpg
+- name: server-cloud-server-racks-door-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-brush.jpg
+- name: berlinwall-DSC-0084-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-monet-one.jpg
+- name: dragon-desert-desert-dragon-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-marcel-duchamp.jpg
+- name: adam-smith-adam-smith-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dry-skin.jpg
+- name: oldtrain-oldtrain-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purple-pond.jpg
+- name: dragon-desert-desert-dragon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
 ---
 Plenty Of Dramatics As Nadal Tops Kyrgios At Wimbledon.&nbsp;Putin Asks Italy To Help Restoring Ties With EU, Meets Pope.&nbsp;Trojans Outlast Union In Championship Shootout.&nbsp;Music In The Mountains Under The Bright Stars.&nbsp;Trump Says Officials Working On Holiday On Census Dispute.&nbsp;Farm Bureau Seeks Photographs For 100th Anniversary.&nbsp;Workforce Development A Hot Topic During Roes Roundtable Discussions.&nbsp;Friends In Need Food Shelf Supporters Awarded.&nbsp;
